--- a/app/components/modules/themes/style.module.scss
+++ b/app/components/modules/themes/style.module.scss
@@ -61,13 +61,13 @@
 }
 .tile{
 	background-color: var(--color-bg);
-	border-top: .5px solid $ridgedLineBottom;
-	border-bottom: 1px solid $ridgedLineTop;
+	border-top: .5px solid var(--color-ridged-line-light);
+	border-bottom: 1px solid var(--color-ridged-line-shadow);
 	border-right: 0;
 	position: relative;
 	@include break(mobile){
-		border-left: .5px solid $ridgedLineBottom;
-		border-right: 1px solid $ridgedLineTop;
+		border-left: .5px solid var(--color-ridged-line-light);
+		border-right: 1px solid var(--color-ridged-line-shadow);
 	}
 	:global(body.light-mode) &{
 		border-top: 1px solid rgba(0,0,0,.07);
